Build with Java 23
Signed-off-by: Fred Bricon <fbricon@gmail.com>